--- a/00-preparation/00-rstudio-github/00-rstudio-github.Rmd
+++ b/00-preparation/00-rstudio-github/00-rstudio-github.Rmd
@@ -66,7 +66,7 @@ options(htmltools.dir.version = FALSE)
 ---
 class: inverse
 
-# Questions? Problenms?
+# Questions? Problems?
 
 --
 ## If **you** are a part of Uncoast Unconf 2019:
