--- a/00-preparation/00-rstudio-github/00-rstudio-github.Rmd
+++ b/00-preparation/00-rstudio-github/00-rstudio-github.Rmd
@@ -59,7 +59,7 @@ options(htmltools.dir.version = FALSE)
 ### GitHub
 
 - do you have an account? 
-- if neded, let's get one
+- if needed, let's get one
 - do you have access to your login credentials?
 - **verification**: say hello on a GitHub issue
 
