Prepare slides for macOS

--- a/00-preparation/01-r-git/r-git-windows.Rmd
+++ b/00-preparation/01-r-git/r-git-windows.Rmd
@@ -10,3 +10,8 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
+
+```{r setup, include=FALSE}
+options(htmltools.dir.version = FALSE)
+```
+
