--- a/00-preparation/01-r-git/r-git-macos.Rmd
+++ b/00-preparation/01-r-git/r-git-macos.Rmd
@@ -10,3 +10,132 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
+
+```{r setup, include=FALSE}
+options(htmltools.dir.version = FALSE)
+```
+
+# Welcome back!
+
+--
+
+### Last week: RStudio IDE and GitHub account
+
+--
+
+### This week: R and git installation
+
+---
+class: inverse
+
+# Questions? Problems?
+
+--
+## If **you** are a part of Uncoast Unconf 2019:
+
+--
+### Check then, create a new GitHub issue:
+
+`https://github.com/uncoast-unconf/uu-2019-day-zero/issues`
+
+--
+## OR
+
+### Email Ian Lyttle at ian [dot] lyttle [at] se [dot] com
+
+---
+
+# Why are we doing this?
+
+--
+
+### We want all of our computers to be ready to collaborate
+
+--
+
+### Package-development tools work best using recent versions of R
+
+--
+
+### To move code to/from GitHub, we need git
+
+---
+
+# Goals for this week
+
+### R
+
+- what version do you have? In the **R console** pane:
+
+```r
+R.version.string
+```
+
+--
+
+```
+## [1] "R version 3.5.3 (2019-03-22)"
+```
+
+- if you have R 3.5.3, **you're done!** 
+
+--
+
+- if not at least 3.4, update (you might want to update anyway)
+  - if you update more than a minor version, e.g. 3.4 -> 3.5, you have to reinstall your R packages
+
+--
+  
+- To install:
+  - go to [this CRAN page](https://cloud.r-project.org/)
+  - follow the *Download and Install R* link for macOS
+
+---
+
+# Goals for this week
+
+### git installation
+
+- do you have git installed? In the **Terminal** pane:
+
+```
+git --version
+```
+
+--
+
+```
+git version 2.17.2 (Apple Git-113)
+```
+
+- if you get a response like this, **you're done!**
+
+--
+
+- if you do not get a response like this, your computer may offer to install *developer command-line tools*
+
+  - we suggest you accept the offer
+  - for our purposes you need only the command-line tools, (**not all of Xcode**)
+
+---
+class: inverse
+
+# Questions? Problems?
+
+--
+## If **you** are a part of Uncoast Unconf 2019:
+
+--
+### Check then, create a new GitHub issue:
+
+`https://github.com/uncoast-unconf/uu-2019-day-zero/issues`
+
+--
+## OR
+
+### Email Ian Lyttle at ian [dot] lyttle [at] se [dot] com
+
+---
+class: inverse, center, middle
+
+# Thanks, see you next week!
