Tweak some points

--- a/00-preparation/03-usethis/00-usethis.Rmd
+++ b/00-preparation/03-usethis/00-usethis.Rmd
@@ -56,11 +56,13 @@ If you haven't gone through the past three weeks, please do so.
 
 - Just had a CRAN release (thanks to Jenny Bryan and her coworkers for the excellent timing)! 
 
+- This week, everything in the Console pane:
+
 ```r
-install.packages("usethis")
+install.packages(c("usethis", "reprex"))
 ```
 
-You may wish to load the package for the next few steps:
+- You may wish to load the package for the next few steps:
 
 ```r
 library("usethis")
@@ -243,6 +245,8 @@ browse_github_pat(description = "your-custom-name-here")
 
 --
 
+- Make sure `.Renviron` ends with a newline!
+
 - Restart your R session.
 
 ---
@@ -312,6 +316,10 @@ usethis::edit_r_profile()
 - If you already have a `.Rprofile` file, save a backup copy.
 
 - If you don't have a `.Rprofile` file (it opens empty), here's a [starter](https://gist.github.com/ijlyttle/dee4a89c8528cd4a0a319bb7b8cdd51a).
+
+  
+- Make sure `.Rprofile` ends with a newline!
+
 
 - When you're done editing `.Rprofile`, save it, then restart R.
 
@@ -385,4 +393,3 @@ class: inverse
 
 ### See you in Des Moines! `r emo::ji("car")` `r emo::ji("airplane")` 
 
----
