moved around slides

--- a/02-project-workflows/00-workflow.Rmd
+++ b/02-project-workflows/00-workflow.Rmd
@@ -169,39 +169,6 @@ class: inverse, middle, center
 
 Workflow-related operations should be executed by you interactively, using whatever means is appropriate to your setup, but not built into the scripts themselves.
 
-
-
----
-## Staying organized
-
-.pull-left[
-`r emo_up` self-explaining  
-
-<br />
-`r emo_up`  
-<br />  
-`r emo_up`   
-
-]
-
-.pull-right[
-`r emo_down` wordy, needy explainers  
-
-<br />
-`r emo_down`   
-
-<br />
-`r emo_down`   
-
-]
-
-<!--
-<br /><br />
-.center[
-#### The more **deliberate** you are about where things live, <br /> the **easier** it will be for you & future you, <br /> the **easier** it will be for other people, <br /> the **easier** it will be for other computers.
-]
--->
-
 ---
 background-image: url(https://pics.me.me/look-into-your-hard-drive-and-open-your-mercy-file-7551660.png)
 background-size: 500px
@@ -265,22 +232,23 @@ class: inverse, center
 # Practice Safe Paths
 
 ---
-## The `here` package
+## Tips to avoid `setwd()`
 
-#### How can you avoid `setwd()` at the top of every script?
+#### The `fs` package
+
+- filepath handling
+
+#### The `here()` package
+
+- project-relative paths  
+
+- identifies your project's files, based on the current working directory at the time when the package is loaded.
+
+`
+---
+## Create a stable base
 
 
-`here()` identifies your project's files, based on the current working directory at the time when the package is loaded.
-
-`r emo_up` There are the only 3 functions in the `here()` package!  
-
-- `here()`:  
-
-- `dr_here()`: understand why
-
-- `set_here()`:  set a place manually
-
--
 
 ---
 background-image: url(https://www.huridocs.org/wp-content/uploads/2016/07/filenaming-comic.png)
@@ -298,6 +266,37 @@ class: inverse, center
 
 ---
 ## Break logic & output into pieces
+
+---
+## Staying organized
+
+.pull-left[
+`r emo_up` self-explaining  
+
+<br />
+`r emo_up`  
+<br />  
+`r emo_up`   
+
+]
+
+.pull-right[
+`r emo_down` wordy, needy explainers  
+
+<br />
+`r emo_down`   
+
+<br />
+`r emo_down`   
+
+]
+
+<!--
+<br /><br />
+.center[
+#### The more **deliberate** you are about where things live, <br /> the **easier** it will be for you & future you, <br /> the **easier** it will be for other people, <br /> the **easier** it will be for other computers.
+]
+-->
 
 ---
 ## Styleguide
