renamed files, changed css

--- a/02-project-workflows/workflow.Rmd
+++ b/02-project-workflows/workflow.Rmd
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Project Workflow &amp;  Good Practices</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="xaringan-theme.css" type="text/css" />
-  </head>
-  <body>
-    <textarea id="source">
-class: center, middle, inverse, title-slide
-
-# Project Workflow &amp;<br /> Good Practices
-## Writing code for ourselves, our future selves, &amp; others
-
+---
+title: "Project Workflow &<br /> Good Practices"
+subtitle: "Writing code for ourselves, our future selves, & others"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    css: ["default", "extra-theme.css"]
+    nature:
+      ratio: "16:9"
+      highlightStyle: github
+      highlightLines: true
+      countIncrementalSlides: false
 ---
 
+```{r setup, include=FALSE}
+options(htmltools.dir.version = FALSE)
+library(tidyverse)
 
-
+# install_github("hadley/emo")
+library(emo)
+emo_pray <- emo::ji("pray")
+emo_up <- emo::ji("+1")
+emo_down <- emo::ji("-1")
+```
 
 # Workflow Topics
 
-&lt;br /&gt;
+<br />
 
-#### 1. Saving source &amp; blank slates  
+#### 1. Saving source & blank slates  
 #### 2. Project-oriented workflow
 #### 3. Practice safe paths
 #### 4. Naming conventions
@@ -30,7 +36,7 @@ class: center, middle, inverse, title-slide
 
 ---
 class: inverse, center, middle
-# Saving source &amp; blank slates 
+# Saving source & blank slates 
 
 ---
 ## Save the source, not the workspace
@@ -41,7 +47,7 @@ Any individual R process and the associated workspace is disposable.
 
 #### Everything that really matters should be achieved through code that you save. 
 
-&lt;img src=https://whattheyforgot.org/img/if-you-liked-it-you-should-have-saved-the-source-for-it.jpg height="360px"/&gt;
+<img src=https://whattheyforgot.org/img/if-you-liked-it-you-should-have-saved-the-source-for-it.jpg height="360px"/>
 ???
 Saving code – not workspaces – is incredibly important because it is an absolute requirement for reproducibility. 
 ---
@@ -57,7 +63,7 @@ Popular IDEs:
 - Visual Studio + RTVS
 
 
-&lt;br /&gt;
+<br />
 #### This eliminates the temptation to develop code directly in the R Console. 
 
 **Direction of causality**: long-time coders don’t organize their work into self-contained projects and use relative paths because they use an IDE. They use an IDE because it makes it easier to follow standard practices, such as these.
@@ -78,30 +84,30 @@ When you launch, do not reload the workspace from an `.Rdata` file.
 
 #### How to enforce them:
 
-In RStudio, set this via *Tools* &gt; *Global Options*
+In RStudio, set this via *Tools* > *Global Options*
 
 `usethis::use_blank_slate()` prints a reminder about how to do this.
 ]
 .pull-right[
-&lt;img src="img/rstudio-workspace.png" height="380px"/&gt;
+<img src="img/rstudio-workspace.png" height="380px"/>
 ]
 ---
 ## Restart R often
 
 .pull-left[
-&lt;img src="img/on-and-off-rect.png" height="400px"/&gt;
+<img src="img/on-and-off-rect.png" height="400px"/>
 ]
 .pull-right[
 #### To restart:
-In RStudio, menu item *Session* &gt; *Restart R*
+In RStudio, menu item *Session* > *Restart R*
 
 Keyboard shortcut: [Ctrl/Command] + Shift + F10 
 
 #### To say "re-run all the code up to HERE":  
 
-In an R script, use &lt;br /&gt;[Ctrl/Command] + [Alt/Option] + B 
+In an R script, use <br />[Ctrl/Command] + [Alt/Option] + B 
 
-In R markdown, use &lt;br /&gt;[Ctrl/Command] + [Alt/Option] + P 
+In R markdown, use <br />[Ctrl/Command] + [Alt/Option] + P 
 
 If you run R from the shell, use Ctrl+D or q() to quit, then restart R.
 
@@ -112,14 +118,14 @@ If you run R from the shell, use Ctrl+D or q() to quit, then restart R.
 
 This is highly *suggestive* of a non-reproducible workflow.
 
-&lt;br /&gt;
+<br />
 This line is meant to reset things, either to power-cycle the current analysis or to switch from one project to another. But there are better ways to do both:
 
 - To power-cycle the current analysis, restart R!  
 
 - To switch from one project to another, either restart R or, even better, use an IDE with proper support for projects, where each project gets its own R process.
 
-&lt;br /&gt;
+<br />
 #### The problem with `rm(list = ls())` is that, given the intent, it does not go far enough.
 
 ???
@@ -132,8 +138,8 @@ This is highly suggestive of a non-reproducible workflow.
 class: inverse, middle, center
 # Project-oriented workflows
 
-&lt;img src="img/mess.jpg" height="400px"/&gt;
-&lt;img src="img/organized.jpg" height="400px"/&gt;
+<img src="img/mess.jpg" height="400px"/>
+<img src="img/organized.jpg" height="400px"/>
 
 ### LPT: Do this as you go, not "tomorrow" 
 
@@ -155,7 +161,7 @@ class: inverse, middle, center
 
 - The R code someone needs to run on your raw data to get your results, including the explicit `library()` calls to load necessary packages.  
 
-&lt;br /&gt;
+<br />
 
 #### Ideally, you don’t hardwire anything about your workflow into your product. 
 
@@ -214,9 +220,9 @@ The RStudio IDE (capital "P") Project
 
 #### Why?
 
-👍 They are the same “unit” as a GitHub repo!
+`r emo_up` They are the same “unit” as a GitHub repo!
 
-👍 You can have multiple Projects going at once!
+`r emo_up` You can have multiple Projects going at once!
 
 ---
 background-image: url(https://pbs.twimg.com/media/DtlqyWZVAAIuylm.jpg:large)
@@ -238,7 +244,7 @@ class: inverse, center
 
 - identifies your project's files, based on the current working directory at the time when the package is loaded.
 
-`
+
 ---
 ## Create a stable base
 
@@ -259,41 +265,90 @@ class: inverse, center
 3. Plays well with default ordering
 
 ---
-## Break logic &amp; output into pieces
+## Break logic & output into pieces
 
 ---
 ## Staying organized
 
 .pull-left[
-👍 self-explaining  
+`r emo_up` self-explaining  
 
-&lt;br /&gt;
-👍  
-&lt;br /&gt;  
-👍   
+<br />
+`r emo_up`  
+<br />  
+`r emo_up`   
 
 ]
 
 .pull-right[
-👎 wordy, needy explainers  
+`r emo_down` wordy, needy explainers  
 
-&lt;br /&gt;
-👎   
+<br />
+`r emo_down`   
 
-&lt;br /&gt;
-👎   
+<br />
+`r emo_down`   
 
 ]
 
-&lt;!--
-&lt;br /&gt;&lt;br /&gt;
+<!--
+<br /><br />
 .center[
-#### The more **deliberate** you are about where things live, &lt;br /&gt; the **easier** it will be for you &amp; future you, &lt;br /&gt; the **easier** it will be for other people, &lt;br /&gt; the **easier** it will be for other computers.
+#### The more **deliberate** you are about where things live, <br /> the **easier** it will be for you & future you, <br /> the **easier** it will be for other people, <br /> the **easier** it will be for other computers.
 ]
---&gt;
+-->
 
 ---
 ## Styleguide
+
+---
+background-image: url()
+background-size: 300px
+background-position: 50% 80%
+class: inverse, center
+# Reprex
+
+---
+## Make a reprex in 2 steps
+
+#### 1. Make your code reproducible
+
+- Make sure you capture everything
+
+  - i.e., include any library() calls and create all necessary objects  
+
+- This can be done with the `reprex` package
+
+#### 2. Make it minimal
+
+- Strip away everything that is not directly related to your problem
+
+- Create a much smaller and simpler R object than the one you’re facing in real life 
+
+  - consider using built-in data
+
+
+---
+## The `reprex` package
+
+```{r message=FALSE, warning=FALSE}
+
+```
+
+Write a bit of code and copy it to the clipboard:
+
+Enter `reprex()` in the R Console. In RStudio, you’ll see a preview of your rendered reprex.
+
+It is now ready and waiting on your clipboard, so you can paste it into, say, a GitHub issue.
+
+If your code is not self-contained, running `reprex()` results in an error.
+
+---
+background-image: url(http://bryanavery.co.uk/wp-content/uploads/2018/11/hero-snapshot-debugger.png)
+background-size: 900px
+background-position: 50% 80%
+class: inverse, center
+# Debugging
 
 ---
 class: bottom, center
@@ -301,7 +356,7 @@ background-image: url(https://pbs.twimg.com/media/D0ytsBEUYAALz7f.jpg:large)
 background-size: 700px
 background-position: 55% 3%
 
-🙏 **Huge thanks** 🙏 
+`r emo_pray` **Huge thanks** `r emo_pray` 
 
 Most of this is built directly from the work of others
 
@@ -309,53 +364,9 @@ Most of this is built directly from the work of others
 class: inverse
 ## Resources
 
-[What They Forgot to Teach You](https://whattheyforgot.org/index.html) by Jenny Bryan &amp; Jim Hester
-    </textarea>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script>var slideshow = remark.create({
-"ratio": "16:9",
-"highlightStyle": "github",
-"highlightLines": true,
-"countIncrementalSlides": false
-});
-if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
-  window.dispatchEvent(new Event('resize'));
-});
-(function() {
-  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
-  if (!r) return;
-  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
-  d.head.appendChild(s);
-})();</script>
+[What They Forgot to Teach You](https://whattheyforgot.org/index.html) by Jenny Bryan & Jim Hester  
 
-<script>
-(function() {
-  var i, text, code, codes = document.getElementsByTagName('code');
-  for (i = 0; i < codes.length;) {
-    code = codes[i];
-    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
-      text = code.textContent;
-      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
-          /^\$\$(.|\s)+\$\$$/.test(text) ||
-          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
-        code.outerHTML = code.innerHTML;  // remove <code></code>
-        continue;
-      }
-    }
-    i++;
-  }
-})();
-</script>
-<!-- dynamically load mathjax for compatibility with self-contained -->
-<script>
-(function () {
-  var script = document.createElement('script');
-  script.type = 'text/javascript';
-  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
-  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
-    script.src  = script.src.replace(/^https?:/, '');
-  document.getElementsByTagName('head')[0].appendChild(script);
-})();
-</script>
-  </body>
-</html>
+
+Illustrations by [Allison Horst](https://twitter.com/allison_horst?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor)
+
+Heike Hofmann's [585X class](https://stat585-at-isu.github.io/schedule.html) at ISU
