--- a/02-project-workflows/workflow.Rmd
+++ b/02-project-workflows/workflow.Rmd
@@ -23,7 +23,7 @@ emo_up <- emo::ji("+1")
 emo_down <- emo::ji("-1")
 ```
 
-# Workflow Topics
+# Workflow topics
 
 <br />
 
@@ -53,20 +53,25 @@ Saving code – not workspaces – is incredibly important because it is an abso
 ---
 ## Use an IDE
 
+#### What?
+
 An [integrated development environment](https://en.wikipedia.org/wiki/Integrated_development_environment) (IDE) makes it much easier to follow best practices.
 
 
-Popular IDEs:  
-- RStudio  
-- Emacs + ESS  
-- vim + Nvim-R  
-- Visual Studio + RTVS
+- Popular IDEs include RStudio, Emacs + ESS, vim + Nvim-R, and Visual Studio + RTVS
 
-
+--
 <br />
-#### This eliminates the temptation to develop code directly in the R Console. 
 
-**Direction of causality**: long-time coders don’t organize their work into self-contained projects and use relative paths because they use an IDE. They use an IDE because it makes it easier to follow standard practices, such as these.
+#### Why?
+
+It helps to eliminate the temptation to develop code directly in the R Console. 
+
+#### Direction of causality:  
+
+- long-time coders don’t organize their work into self-contained projects and use relative paths because they use an IDE.  
+
+- They use an IDE because it makes it easier to follow standard practices, such as these.
 
 (More on this to come)
 
@@ -77,12 +82,12 @@ best practices = develop reproducible code in a .R or .Rmd file
 ## Always start R with a blank slate
 
 .pull-left[
-#### The rules:
+#### What to do:
 When you quit R, do not save the workspace to an `.Rdata` file.  
 
 When you launch, do not reload the workspace from an `.Rdata` file.
 
-#### How to enforce them:
+#### How to do it:
 
 In RStudio, set this via *Tools* > *Global Options*
 
@@ -92,24 +97,26 @@ In RStudio, set this via *Tools* > *Global Options*
 <img src="img/rstudio-workspace.png" height="380px"/>
 ]
 ---
+
+
+.left-minus[
+<img src="img/on-and-off.png" height="500px"/>
+]
+.right-plus[
 ## Restart R often
 
-.pull-left[
-<img src="img/on-and-off-rect.png" height="400px"/>
-]
-.pull-right[
 #### To restart:
 In RStudio, menu item *Session* > *Restart R*
 
-Keyboard shortcut: [Ctrl/Command] + Shift + F10 
+Keyboard shortcut: **[Ctrl/Command] + Shift + F10**
 
 #### To say "re-run all the code up to HERE":  
 
-In an R script, use <br />[Ctrl/Command] + [Alt/Option] + B 
+In an R script, use <br />**[Ctrl/Command] + [Alt/Option] + B**
 
-In R markdown, use <br />[Ctrl/Command] + [Alt/Option] + P 
+In R markdown, use <br />**[Ctrl/Command] + [Alt/Option] + P**
 
-If you run R from the shell, use Ctrl+D or q() to quit, then restart R.
+If you run R from the shell, use **Ctrl+D** or **q()** to quit, then restart R.
 
 ]
 
@@ -174,7 +181,7 @@ background-image: url(https://pics.me.me/look-into-your-hard-drive-and-open-your
 background-size: 500px
 background-position: 0% 50%
 
-.right-third[
+.right-plus[
 ### `setwd("path/that/only/works/on/my/machine")`
 The chance of the `setwd()` command having the desired effect – making the file paths work – for anyone besides its author is 0%. 
 
@@ -201,9 +208,9 @@ Use an IDE that supports a project-based workflow. This eliminates the tension b
 ---
 ## Adopt a project-oriented workflow
 
-**Project**= a folder on your computer that holds all the files relevant to that particular piece of work
+**Project** = a folder on your computer that holds all the files relevant to that particular piece of work
 
-**Project-oriented workflow**= a file system discipline
+**Project-oriented workflow** = a file system discipline
 
 - All paths are relative — relative to the project's folder  
 
@@ -351,6 +358,10 @@ class: inverse, center
 # Debugging
 
 ---
+## Debugging
+
+![](https://imgs.xkcd.com/comics/fixing_problems.png)
+---
 class: bottom, center
 background-image: url(https://pbs.twimg.com/media/D0ytsBEUYAALz7f.jpg:large)
 background-size: 700px
@@ -370,3 +381,5 @@ class: inverse
 Illustrations by [Allison Horst](https://twitter.com/allison_horst?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor)
 
 Heike Hofmann's [585X class](https://stat585-at-isu.github.io/schedule.html) at ISU
+
+[Streamlined workflows in R](https://jules32.github.io/streamlined-workflows/#1) by Julie Lowndes
